Change md mixin to support better min/max
This commit modifies the `md` mixin defined in `mixins.scss` to accept as parameters both a `min` and a `max` width in a non exclusive way.
Before we were forced to always specify a `min` width while the `max` was optional. Now they are both optional.
Note that using `md` without `min` or `max` will cause an error, but we can specify only `min`, `max`, or both.

--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -4,14 +4,24 @@ $screen-large: 1024px;
 $screen-xlarge: 1200px;
 $screen-xxlarge: 1600px;
 
-@mixin md($min, $max: false) {
-    $media-query: '(min-width: #{$min})';
+@mixin md($min: null, $max: null) {
+    $query: '';
 
-    @if $max {
-        $media-query: '#{$media-query} and (max-width: #{$max})';
+    @if ($min == null) and ($max ==  null) {
+        @error "At least one of $min or $max should be specified.";
+    }
+    @if $min != null {
+        $query: '(min-width: #{$min})';
+
+        @if ($max != null) {
+            $query: '#{$query} and ';
+        }
+    }
+    @if $max != null {
+        $query: '#{$query}(max-width: #{$max})';
     }
 
-    @media #{$media-query} {
+    @media #{$query} {
         @content;
     }
 }
