Add `Navbar.svelte` component
This commit adds the main navbar component of the application. Since the navbar needs to display icons, this commit also introduces the `Icon.svelte` component to help display a icon with the correct size.

In this commit we also add all the svg icons needed by the application. The icons are located under `src/lib/assets/icons`.
To load svg icons as svelte components we use the vite preprocessing plugin `@poppanator/sveltekit-svg` added as dependency in this commit.

--- a/src/app.scss
+++ b/src/app.scss
@@ -41,6 +41,7 @@
 	--color-extra-on-backdrop: #FFFFFF;
 
 	// Dimensions
+	--2px: 2px;
 	--4px: 4px;
 	--5px: 5px;
 	--6px: 6px;
@@ -94,6 +95,7 @@ html {
 	color: var(--color-primary);
 	background: var(--color-surface);
 
+	width: 100%;
 	min-height: 100vh;
 	margin: 0;
 	padding: 0;
