Add cards, headers and project page
This commit adds part of the content of the projects page. For this reason in this commit we introduce the `SectionHeader.svelte` component and the `ProjectCard.svelte` component.

This commit also adds the `BaseCard.svelte` component that is used by the ProjectCard and will be used by other cards in the future.

--- a/src/app.scss
+++ b/src/app.scss
@@ -59,6 +59,7 @@
 	--36px: 36px;
 	--45px: 45px;
 	--48px: 48px;
+	--52px: 52px;
 	--80px: 80px;
 	--90px: 90px;
 	--100px: 100px;
@@ -66,6 +67,8 @@
 	--zindex-nav: 1000;
 
 	--max-width: 1800px;
+	--card-max-width: 950px;
+	--header-max-width: 900px;
 
 	// TODO: Make spacing responsive
 	--spacing-xxs: calc(7px);
