Redesign the footer component
In this commit we introduce a slight redesign of the footer component. Since all the constats are moved to the contats page there is no need for including them also in the footer. For this reason the footer has been redesigned to have a copyright text just like before and a funny sundial at te bottom.

--- a/src/app.scss
+++ b/src/app.scss
@@ -47,6 +47,7 @@
 	--contacts-width: 350px;
 	--card-max-width: 950px;
 	--header-max-width: 900px;
+	--footer-max-width: 900px;
 
 	// Spacing
 	--spacing-xxs: calc(6px + (6 * (100vw - 375px) / (1800 - 375)));
